// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table session {
  id integer [primary key]
  datetime_utc timestamp
  datetime_device timestamp
  device_id integer
  type varchar
  status_id integer
  url varchar
  dst_id integer
  src_id integer
  protocol varchar
  attack_hash float
  trigger_count integer
}

Table device{
  id varchar [primary key]
  name varchar
  host varchar
}

Table source{
  id integer [primary key]
  ip varchar
  port integer
  country varchar
  username varchar
}

Table domain{
  id integer [primary key]
  ip varchar
  port integer
  country varchar
  path varchar
  access_count integer
  analysis_attemps_count integer
  content_analysis_counter integer
  decision_id integer
  decision_datetime timestamp
  last_access_datetime timestamp
}

Table decision{
  id integer
  decision varchar
}

Table detection{
  id integer [primary key]
  description varchar
  session_id integer
  action_id integer
}

Table status{
  id integer [primary key]
  status varchar
}

Table category{
  id integer [primary key]
  category varchar
  percent float
}

Table category_domain{
  category_id integer
  domain_id integer
  primary key(categoty_id, domain_id)
}

Ref: "source"."id" < "session"."src_id"

Ref: "domain"."id" < "session"."dst_id"

Ref: "status"."id" < "session"."status_id"

Ref: "decision"."id" < "domain"."decision_id"

Ref: "category_domain"."category_id" > "category"."id" 

Ref: "category_domain"."domain_id" > "domain"."id"  

Ref: "detection"."session_id" < "session"."id"

Ref: "device"."id" < "session"."device_id"